--- a/index.html
+++ b/index.html
@@ -34,24 +34,45 @@
         <div class="jumbotron-social">
           <ul class="ul-social">
             <li class="li-social-links">
-              <a class="social" href="https://www.facebook.com/msaaaaad/" target="_blank"
-                ><i title="facebook" class="fa fa-facebook" aria-hidden="true"></i
+              <a
+                class="social"
+                href="https://www.facebook.com/msaaaaad/"
+                target="_blank"
+                ><i
+                  title="facebook"
+                  class="fa fa-facebook"
+                  aria-hidden="true"
+                ></i
               ></a>
             </li>
             <li class="li-social-links">
-              <a class="social" href="https://instagram.com/msaaaaad_" target="_blank"
-                ><i title="instagram" class="fa fa-instagram" aria-hidden="true"></i
+              <a
+                class="social"
+                href="https://instagram.com/msaaaaad_"
+                target="_blank"
+                ><i
+                  title="instagram"
+                  class="fa fa-instagram"
+                  aria-hidden="true"
+                ></i
               ></a>
             </li>
-  
+
             <li class="li-social-links">
               <a class="social" href="https://github.com/msaaad" target="_blank"
                 ><i title="github" class="fa fa-github" aria-hidden="true"></i
               ></a>
             </li>
             <li class="li-social-links">
-              <a class="social" href="https://www.linkedin.com/in/muhammad-saad-4791ab1b3/" target="_blank"
-                ><i title="linkedin" class="fa fa-linkedin" aria-hidden="true"></i
+              <a
+                class="social"
+                href="https://www.linkedin.com/in/muhammad-saad-4791ab1b3/"
+                target="_blank"
+                ><i
+                  title="linkedin"
+                  class="fa fa-linkedin"
+                  aria-hidden="true"
+                ></i
               ></a>
             </li>
           </ul>
@@ -75,13 +96,19 @@
           </div>
           <div class="content-body">
             <p>
-              Hey there, I am saad, an undergraduate completing my degree in Computer and Systems Enginnering from NED university, Karachi. 
+              Hey there, I am saad, an undergraduate completing my degree in
+              Computer and Systems Enginnering from NED university, Karachi.
             </p>
             <p>
-              Passionate about coding, love to play with colors and visuals, has a good command in frontend works and has worked on python, C++, HTML, CSS, javascript, reactjs, MySQL, NoSQL and wordpress projects. A Group leader in university projects and has a good searching and management skills. 
+              Passionate about coding, love to play with colors and visuals, has
+              a good command in frontend works and has worked on python, C++,
+              HTML, CSS, javascript, reactjs, MySQL, NoSQL and wordpress
+              projects. A Group leader in university projects and has a good
+              searching and management skills.
             </p>
             <p>
-A tech nerd, loves to explore different aspects of techs including new smartphones, laptops, Operating Systems, new SoCs and GPUs.   
+              A tech nerd, loves to explore different aspects of techs including
+              new smartphones, laptops, Operating Systems, new SoCs and GPUs.
             </p>
           </div>
         </div>
@@ -101,33 +128,36 @@ A tech nerd, loves to explore different aspects of techs including new smartphon
             <!-- EDUCATION 1 -->
             <div class="card">
               <div class="card-header">
-                <h4>Prince Aly Boys School  <span class="job-title">2005 - 2015</span></h4>
+                <h4>
+                  Prince Aly Boys School
+                  <span class="job-title">2005 - 2015</span>
+                </h4>
               </div>
               <div class="card-content">
-                <p>
-Scored 86% marks in matriculation exams.
-                </p>
+                <p>Scored 86% marks in matriculation exams.</p>
               </div>
             </div>
             <!-- EDUCATION 2 -->
             <div class="card">
               <div class="card-header">
-                <h4>Adamjee Govt. Science College <span class="job-title">2015 - 2017</span></h4>
+                <h4>
+                  Adamjee Govt. Science College
+                  <span class="job-title">2015 - 2017</span>
+                </h4>
               </div>
               <div class="card-content">
-                <p>
-Scored 84% marks in intermediate exams.
-                </p>
+                <p>Scored 84% marks in intermediate exams.</p>
               </div>
             </div>
             <div class="card">
               <div class="card-header">
-                <h4>NED University of Engeering and Tech. <span class="job-title">2017 - Present</span></h4>
+                <h4>
+                  NED University of Eng and Tech.
+                  <span class="job-title">2017 - Present</span>
+                </h4>
               </div>
               <div class="card-content">
-                <p>
-                  Degree in BE CIS with a CGPA of 3.4 currently.
-                </p>
+                <p>Degree in BE CIS with a CGPA of 3.4 currently.</p>
               </div>
             </div>
           </div>
@@ -153,7 +183,9 @@ Scored 84% marks in intermediate exams.
               <div class="project-content">
                 <h4>AIO - All In One</h4>
                 <p>
-An All In One website made with HTML, CSS, JS and bootstrap. More features adding soon.                </p>
+                  An All In One website made with HTML, CSS, JS and bootstrap.
+                  More features adding soon.
+                </p>
                 <a href="https://msaaad.github.io/AIO">Live Demo</a>
                 <a href="https://www.github.com/msaaad/AIO">Source Code</a>
               </div>
@@ -165,11 +197,11 @@ An All In One website made with HTML, CSS, JS and bootstrap. More features addin
               </div>
               <div class="project-content">
                 <h4>E - Dealers</h4>
-                <p>
-An E-commerce website made with web-development tools.                </p>
-<a href="https://msaaad.github.io/E-Dealers">Live Demo</a>
-<a href="https://www.github.com/msaaad/E-Dealers">Source Code</a>
-
+                <p>An E-commerce website made with web-development tools.</p>
+                <a href="https://msaaad.github.io/E-Dealers">Live Demo</a>
+                <a href="https://www.github.com/msaaad/E-Dealers"
+                  >Source Code</a
+                >
               </div>
             </div>
             <!-- CARD #3 -->
@@ -179,11 +211,9 @@ An E-commerce website made with web-development tools.                </p>
               </div>
               <div class="project-content">
                 <h4>Namer</h4>
-                <p>
-A name meaning finder website.                </p>
-<a href="https://msaaad.github.io/namer">Live Demo</a>
-<a href="https://www.github.com/msaaad/namer">Source Code</a>
-
+                <p>A name meaning finder website.</p>
+                <a href="https://msaaad.github.io/namer">Live Demo</a>
+                <a href="https://www.github.com/msaaad/namer">Source Code</a>
               </div>
             </div>
             <div class="project-card">
@@ -191,12 +221,10 @@ A name meaning finder website.                </p>
                 <img src="./img/tictac.png" />
               </div>
               <div class="project-content">
-                <h4>Tic Tac Toe </h4>
-                <p>
-A Tic Tac Toe game made with HTML, CSS and javascript. </p>             
-<a href="https://msaaad.github.io/TicTac">Live Demo</a>
-<a href="https://www.github.com/msaaad/TicTac">Source Code</a>
-
+                <h4>Tic Tac Toe</h4>
+                <p>A Tic Tac Toe game made with HTML, CSS and javascript.</p>
+                <a href="https://msaaad.github.io/TicTac">Live Demo</a>
+                <a href="https://www.github.com/msaaad/TicTac">Source Code</a>
               </div>
             </div>
             <div class="project-card">
@@ -204,10 +232,26 @@ A Tic Tac Toe game made with HTML, CSS and javascript. </p>
                 <img src="./img/nerdbot.png" />
               </div>
               <div class="project-content">
-                <h4>NerdBot</h4>
-                <p> A chatbot made with HTML, CSS, javascript and rivescript for learning patterns. </p>  
+                <h4>Tic Tac Toe</h4>
+                <p>A Tic Tac Toe game made with HTML, CSS and javascript.</p>
+                <a href="https://msaaad.github.io/nerdbot">Live Demo</a>
+                <a href="https://www.github.com/msaaad/nerdbot">Source Code</a>
+              </div>
+            </div>
+            <div class="project-card">
+              <div class="project-image">
+                <img src="./img/nerdbot.png" />
+              </div>
+              <div class="project-content">
+                <h4>Tic Tac Toe</h4>
+                <p>A Tic Tac Toe game made with HTML, CSS and javascript.</p>
+                <a href="https://msaaad.github.io/nerdbot">Live Demo</a>
+                <a href="https://www.github.com/msaaad/nerdbot">Source Code</a>
+              </div>
+            </div>
           </div>
         </div>
+
         <div class="side-content-sm"></div>
       </div>
       <!-- END PROJECTS -->
@@ -283,7 +327,9 @@ A Tic Tac Toe game made with HTML, CSS and javascript. </p>
         <div class="main-content">
           <div class="content-header"></div>
           <div class="content-body">
-            <a href="https://www.github.com/msaaad">Copyright &copy Muhammad Saad</p>
+            <a href="https://www.github.com/msaaad"
+              >Copyright &copy Muhammad Saad</a
+            >
           </div>
         </div>
         <div class="side-content"></div>
