--- a/index.html
+++ b/index.html
@@ -186,9 +186,12 @@
                   An All In One website made with HTML, CSS, JS and bootstrap.
                   More features adding soon.
                 </p>
-                <a href="https://msaaad.github.io/AIO">Live Demo</a>
-                <a href="https://www.github.com/msaaad/AIO">Source Code</a>
               </div>
+              <a href="https://msaaad.github.io/AIO" class="btn1">Live Demo</a>
+      
+              <a href="https://www.github.com/msaaad/AIO" class="btn1"
+                >Source Code</a
+              >
             </div>
             <!-- CARD #2 -->
             <div class="project-card">
@@ -198,11 +201,13 @@
               <div class="project-content">
                 <h4>E - Dealers</h4>
                 <p>An E-commerce website made with web-development tools.</p>
-                <a href="https://msaaad.github.io/E-Dealers">Live Demo</a>
-                <a href="https://www.github.com/msaaad/E-Dealers"
-                  >Source Code</a
-                >
               </div>
+              <a href="https://msaaad.github.io/E-Dealers" class="btn1"
+                >Live Demo</a
+              >
+              <a href="https://www.github.com/msaaad/E-Dealers" class="btn1"
+                >Source Code</a
+              >
             </div>
             <!-- CARD #3 -->
             <div class="project-card">
@@ -211,10 +216,14 @@
               </div>
               <div class="project-content">
                 <h4>Namer</h4>
-                <p>A name meaning finder website.</p>
-                <a href="https://msaaad.github.io/namer">Live Demo</a>
-                <a href="https://www.github.com/msaaad/namer">Source Code</a>
+                <p>A name meaning finder website made with HTML,CSS and JS.</p>
               </div>
+              <a href="https://msaaad.github.io/namer" class="btn1"
+                >Live Demo</a
+              >
+              <a href="https://www.github.com/msaaad/namer" class="btn1"
+                >Source Code</a
+              >
             </div>
             <div class="project-card">
               <div class="project-image">
@@ -223,9 +232,13 @@
               <div class="project-content">
                 <h4>Tic Tac Toe</h4>
                 <p>A Tic Tac Toe game made with HTML, CSS and javascript.</p>
-                <a href="https://msaaad.github.io/TicTac">Live Demo</a>
-                <a href="https://www.github.com/msaaad/TicTac">Source Code</a>
               </div>
+              <a href="https://msaaad.github.io/TicTac" class="btn1"
+                >Live Demo</a
+              >
+              <a href="https://www.github.com/msaaad/TicTac" class="btn1"
+                >Source Code</a
+              >
             </div>
             <div class="project-card">
               <div class="project-image">
@@ -234,9 +247,13 @@
               <div class="project-content">
                 <h4>Tic Tac Toe</h4>
                 <p>A Tic Tac Toe game made with HTML, CSS and javascript.</p>
-                <a href="https://msaaad.github.io/nerdbot">Live Demo</a>
-                <a href="https://www.github.com/msaaad/nerdbot">Source Code</a>
               </div>
+              <a href="https://msaaad.github.io/nerdbot" class="btn1"
+                >Live Demo</a
+              >
+              <a href="https://www.github.com/msaaad/nerdbot" class="btn1"
+                >Source Code</a
+              >
             </div>
             <div class="project-card">
               <div class="project-image">
@@ -245,9 +262,13 @@
               <div class="project-content">
                 <h4>Tic Tac Toe</h4>
                 <p>A Tic Tac Toe game made with HTML, CSS and javascript.</p>
-                <a href="https://msaaad.github.io/nerdbot">Live Demo</a>
-                <a href="https://www.github.com/msaaad/nerdbot">Source Code</a>
               </div>
+              <a href="https://msaaad.github.io/nerdbot" class="btn1"
+                >Live Demo</a
+              >
+              <a href="https://www.github.com/msaaad/nerdbot" class="btn1"
+                >Source Code</a
+              >
             </div>
           </div>
         </div>
@@ -322,12 +343,14 @@
       <!-- END CONTACT -->
 
       <!-- BEGIN FOOTER -->
-      <div class="row">
+      <div class="row" style="background: teal">
         <div class="side-content"></div>
         <div class="main-content">
           <div class="content-header"></div>
           <div class="content-body">
-            <a href="https://www.github.com/msaaad"
+            <a
+              href="https://www.github.com/msaaad"
+              style="position: absolute; text-decoration: none; color: white"
               >Copyright &copy Muhammad Saad</a
             >
           </div>
