--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
       <!-- HEADER -->
       <div class="jumbotron">
         <div class="jumbotron-text">
+          <div>
+            <img src="./img/personal.jpg" class="personalpic" alt="personal.jpg">
+          </div>
           <h1>Muhammad Saad</h1>
           <div class="jumbotron-social">
             <ul class="ul-social">
@@ -76,8 +79,9 @@
             </ul>
           </div>
           <p>A learning Coder and an aspiring web-developer :)</p>
+
         </div>
-        
+
         <div id="down-arrow">
           <span
             ><a href="#about"
