--- a/index.html
+++ b/index.html
@@ -24,17 +24,27 @@
   <body>
     <!-- BEGIN NAVBAR -->
     <div class="navbar">
-      <div class="logo">
-        <a href="#"> PORTFOLIO</a>
-      </div>
-      <a href="#about">About Me </a>
-      <a href="#education">Education</a>
-      <a href="#projects">Projects</a>
-      <a href="#skills">Skills</a>
-      <div class="contact-right">
-        <a href="#contact">Contact</a>
-      </div>
-    </div>
+        <div class="logo">
+          <a href="#">PORTFOLIO</a>
+        </div>
+  
+        <div class="burger">
+            <div class="line"></div>
+            <div class="line"></div>
+            <div class="line"></div>
+        </div>
+        <ul class="links">
+            <li><a href="#about">About Me </a></li>
+            <li><a href="#education">Education</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#skills">Skills</a></li>
+          </ul>
+          <div class="contact-right">
+            <a href="#contact">Contact</a>
+          </div>
+  </div>
+    
+    <script src="./app.js"></script>
     <!-- END NAVBAR -->
 
     <div class="container">
@@ -361,7 +371,7 @@
       <!-- END CONTACT -->
 
       <!-- BEGIN FOOTER -->
-      <div class="row" style="background: teal">
+      <div class="row" style="background: teal;">
         <div class="side-content"></div>
         <div class="main-content">
           <div class="content-header">
@@ -423,7 +433,6 @@
             <a
               href="https://www.github.com/msaaad"
               style="
-                position: absolute;
                 text-decoration: none;
                 color: white;
                 width: max-content;
