correcting nav bar

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <li><a href="#skills">Skills</a></li>
           </ul>
           <div class="contact-right">
-            <a href="#contact">Contact</a>
+            <a href="#contact">CONTACT</a>
           </div>
   </div>
     
@@ -438,7 +438,7 @@
                 width: max-content;
                 font-size: 18px;
               "
-              >Copyright &copy Muhammad Saad</a
+              >Designed By &copy Muhammad Saad</a
             >
           </div>
         </div>
