--- a/index.html
+++ b/index.html
@@ -5,13 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-    <title>Muhammad Saad</title>
+    <title>Portfolio</title>
     <link rel="shortcut icon" type="image/x-icon" href="./img/favicon.ico" />
-    <link rel="stylesheet" href="style.css" />
-    <!-- <link
-      href="https://fonts.googleapis.com/css?family=Raleway:200,300,400,500,600,700,800"
-      rel="stylesheet"
-    /> -->
+    <link rel="stylesheet" href="./style.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,500;1,500&display=swap"
       rel="stylesheet"
@@ -20,6 +16,7 @@
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
     />
+    <link rel="stylesheet" href="./animate.css">
   </head>
   <body>
     <!-- BEGIN NAVBAR -->
@@ -51,10 +48,10 @@
       <!-- HEADER -->
       <div class="jumbotron">
         <div class="jumbotron-text">
-          <div>
+          <div class="profile-photo">
             <img
               src="./img/personal.jpg"
-              class="personalpic"
+              class="personalpic" 
               alt="personal.jpg"
             />
           </div>
