--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <link rel="stylesheet" href="./animate.css">
   </head>
   <body>
     <!-- BEGIN NAVBAR -->
@@ -269,8 +268,8 @@
                 <img src="./img/nerdbot.png" />
               </div>
               <div class="project-content">
-                <h4>Tic Tac Toe</h4>
-                <p>A Tic Tac Toe game made with HTML, CSS and javascript.</p>
+                <h4>Nerd Bot</h4>
+                <p>A chatbot made with HTML, css, js and riverscript for pattern matching</p>
               </div>
               <a href="https://msaaad.github.io/nerdbot" class="btn1"
                 >Live Demo</a
@@ -281,19 +280,71 @@
             </div>
             <div class="project-card">
               <div class="project-image">
-                <img src="./img/nerdbot.png" />
+                <img src="./img/simplecalculator.png" />
               </div>
               <div class="project-content">
-                <h4>Tic Tac Toe</h4>
-                <p>A Tic Tac Toe game made with HTML, CSS and javascript.</p>
+                <h4>Simple Caclculator</h4>
+                <p>A simple calculator made with HTML, CSS and js</p>
               </div>
-              <a href="https://msaaad.github.io/nerdbot" class="btn1"
+              <a href="https://msaaad.github.io/simple-calculator" class="btn1"
                 >Live Demo</a
               >
-              <a href="https://www.github.com/msaaad/nerdbot" class="btn1"
+              <a href="https://www.github.com/msaaad/simple-calculator" class="btn1"
                 >Source Code</a
               >
             </div>
+            <div class="project-card">
+              <div class="project-image">
+                <img src="./img/bubble_trouble.png" />
+              </div>
+              <div class="project-content">
+                <h4>Bubble Trouble</h4>
+                <p>A python game made with pygame and OOP techniques</p>
+              </div>
+              <a href="https://www.github.com/msaaad/Bubble-Trouble" class="btn2"
+                >Source Code</a
+              >
+            </div>
+
+            <div class="project-card">
+              <div class="project-image">
+                <img src="./img/pacman.png" />
+              </div>
+              <div class="project-content">
+                <h4>Pacman game</h4>
+                <p>A python game made with pygame and OOP techniques</p>
+              </div>
+              <a href="https://www.github.com/msaaad/Pac-man" class="btn2"
+                >Source Code</a
+              >
+            </div>
+
+            <div class="project-card">
+              <div class="project-image">
+                <img src="./img/bowling.png" />
+              </div>
+              <div class="project-content">
+                <h4>Bowling Game</h4>
+                <p>A simple bowling game coded in python</p>
+              </div>
+              <a href="https://www.github.com/msaaad/Bowling-Game" class="btn2"
+                >Source Code</a
+              >
+            </div>
+
+            <div class="project-card">
+              <div class="project-image">
+                <img src="./img/carbooking.png" />
+              </div>
+              <div class="project-content">
+                <h4>Car booking Management System</h4>
+                <p>A car booking management system coded in python with Tkinter library</p>
+              </div>
+              <a href="https://www.github.com/msaaad/car-booking-system" class="btn2"
+                >Source Code</a
+              >
+            </div>
+
           </div>
         </div>
 
