--- a/index.html
+++ b/index.html
@@ -48,13 +48,9 @@
       <div class="jumbotron">
         <div class="jumbotron-text">
           <div class="profile-photo">
-            <img
-              src="./img/personal.jpg"
-              class="personalpic" 
-              alt="personal.jpg"
-            />
+     <img src="./img/personal.gif" class="personalpic">
           </div>
-          <h1>Muhammad Saad</h1>
+          <h1>Your name</h1>
           <div class="jumbotron-social">
             <ul class="ul-social">
               <li class="li-social-links">
@@ -104,7 +100,7 @@
               </li>
             </ul>
           </div>
-          <p>A learning Coder and an aspiring web-developer :)</p>
+          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. </p>
         </div>
       </div>
       <!-- END HEADER -->
@@ -119,19 +115,13 @@
           </div>
           <div class="content-body">
             <p>
-              Hey there, I am saad, an undergraduate completing my degree in
-              Computer and Systems Enginnering from NED university, Karachi.
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde natus dolores distinctio quasi quae asperiores, illum ducimus mollitia voluptatem animi delectus libero repellendus? Ipsum provident esse repellat maiores perspiciatis optio!
             </p>
             <p>
-              Passionate about coding, love to play with colors and visuals, has
-              a good command in frontend works and has worked on python, C++,
-              HTML, CSS, javascript, reactjs, MySQL, NoSQL and wordpress
-              projects. A Group leader in university projects and has a good
-              searching and management skills.
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore voluptatibus minima quasi omnis necessitatibus adipisci! Dolorem dolor tempora, necessitatibus ullam reiciendis tempore! Accusantium cupiditate quas ea odio optio, autem porro.
             </p>
             <p>
-              A tech nerd, loves to explore different aspects of techs including
-              new smartphones, laptops, Operating Systems, new SoCs and GPUs.
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis et a amet. Deleniti, vitae exercitationem recusandae ex laudantium animi eum autem natus ipsa assumenda similique eos error distinctio cupiditate id!
             </p>
           </div>
         </div>
@@ -152,35 +142,35 @@
             <div class="card">
               <div class="card-header">
                 <h4>
-                  Prince Aly Boys School
-                  <span class="job-title">2005 - 2015</span>
+                  School time
+                  <span class="job-title">start - end</span>
                 </h4>
               </div>
               <div class="card-content">
-                <p>Scored 86% marks in matriculation exams.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
               </div>
             </div>
             <!-- EDUCATION 2 -->
             <div class="card">
               <div class="card-header">
                 <h4>
-                  Adamjee Govt. Science College
-                  <span class="job-title">2015 - 2017</span>
+College time
+                  <span class="job-title">start - end</span>
                 </h4>
               </div>
               <div class="card-content">
-                <p>Scored 84% marks in intermediate exams.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
               </div>
             </div>
             <div class="card">
               <div class="card-header">
                 <h4>
-                  NED University of Eng and Tech.
-                  <span class="job-title">2017 - Present</span>
+                  University life
+                  <span class="job-title">start - end</span>
                 </h4>
               </div>
               <div class="card-content">
-                <p>Degree in BE CIS with a CGPA of 3.4 currently.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
               </div>
             </div>
           </div>
