--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!-- BEGIN NAVBAR -->
     <div class="navbar">
         <div class="logo">
-          <a href="#">PORTFOLIO</a>
+          <a href="#">Portfolio</a>
         </div>
   
         <div class="burger">
@@ -36,7 +36,7 @@
             <li><a href="#skills">Skills</a></li>
           </ul>
           <div class="contact-right">
-            <a href="#contact">CONTACT</a>
+            <a href="#contact">Contact</a>
           </div>
   </div>
     
